[project]
name = "nbp_unleashed"
description = "Custom ComfyUI nodes for Nano Banana Pro image generation and editing via fal.ai API."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/digital-divas-admin/ComfyUI_NBP_Unleashed"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/digital-divas-admin/ComfyUI_NBP_Unleashed/wiki"
"Bug Tracker" = "https://github.com/digital-divas-admin/ComfyUI_NBP_Unleashed/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_NBP_Unleashed"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

